<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMUWeather</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">Weather Condition Image</string>
    <string name="separator">/</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="precipitation">Precipitation</string>
    <string name="last_update">Last update</string>
    <string name="update_this">Update Now</string>
    <string name="no_row">-</string>
    <string name="no_data">No Data</string>
    <string name="minimum">Min</string>
    <string name="maximum">Max</string>
    <string name="today">,Today</string>
    <string name="view_forecast">View Forecast</string>
    <string name="current_temp">Current Temperature: </string>
    <string name="update_weather">Update Weather Info</string>
    <string name="map_view">View Map</string>
    <string name="preferences">Preferences</string>
    <string name="pf_title_place">Favourite Place</string>
	<string name="pf_sm_place">Select your favourite place, this place will be displayed in the widget</string>
	<string name="pf_place">Places</string>
	<string name="pf_title_option">Unit Preferences</string>
	<string name="pf_sm_wind">Select the unit to wind speed</string>
	<string name="pf_wind">Wind Speed</string>
	<string name="pf_sm_degree">Select the unit of temperature</string>
	<string name="pf_degree">Temperature Unit</string>

</resources>