<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="25dp" >

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/today"
                android:textSize="20sp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30dp" >

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            android:src="@drawable/nodata_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp" >

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no_data"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no_data"
                android:textColor="#7c7c7c"
                android:textSize="13sp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="35dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="45dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="25dp"
            android:text="@string/humidity"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="25dp"
            android:text="@string/no_data"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="25dp"
            android:text="@string/precipitation"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/precipitation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="25dp"
            android:text="@string/no_data"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="25dp"
            android:text="@string/wind_speed"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="25dp"
            android:text="@string/no_data"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="25dp"
            android:text="@string/wind_direction"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wind_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="25dp"
            android:text="@string/no_data"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="60dp" >

        <TextView
            android:id="@+id/details_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:onClick="goToForecast"
            android:paddingRight="10dp"
            android:text="@string/view_forecast"
            android:textColor="#7d7d7d"
            android:textSize="17sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="40dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/last_update"
            android:textColor="#7d7d7d"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/no_data"
            android:textColor="#7d7d7d"
            android:textSize="12sp" />
        
        
    </TableRow>

</TableLayout>