<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forecast_row_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:layout_span="3"
            android:paddingLeft="15dp" >

            <TextView
                android:id="@+id/forecast_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data" />

            <TextView
                android:id="@+id/forecast_prevision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="#7c7c7c"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/forecast_weather_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_description"
            android:layout_gravity="right"
            android:src="@drawable/s20x20wsymbol_0001_sunny" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/minimum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/maximum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="0dp" >

                <TextView
                    android:id="@+id/forecast_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/no_data"
                    android:textColor="#7c7c7c"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/forecast_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/no_data"
                    android:textColor="#7c7c7c"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </TableRow>

</TableLayout>